--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,10 @@
   "browser_action": {
     "default_title": "Read selection"
   },
-  "permissions": ["activeTab", "tts"],
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": false
+  },
+  "permissions": ["activeTab", "storage", "tts"],
   "manifest_version": 2
 }
